# stack

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  uninstall.sh
.claude/skills/stacked-diff-decomposer/: SKILL.md
lib/: az_helpers.sh  backup.sh  branchless.sh  common.sh  conflict.sh  git_helpers.sh  manifest.sh  prompt.sh  structured.sh  verify.sh
libexec/: stack-abort  stack-land  stack-list  stack-push  stack-status  stack-sync  stack-update
pystack/: README.md  pyproject.toml
pystack/stack_cli/: main.py  safeguards.py
pystack/stack_cli/commands/: status.py
pystack/stack_core/: __init__.py  config.py  exceptions.py  git_ops.py  state_store.py  topology.py  types.py
pystack/stack_core/ado/: __init__.py  client.py  pr.py
pystack/stack_core/operations/: status.py
pystack/tests/integration/: conftest.py
pystack/tests/unit/: test_cli_status.py  test_config.py  test_git_ops.py  test_manifest.py  test_types.py
share/: pr-description-leaf.tmpl  pr-description-root-landed.tmpl  pr-description-root.tmpl  pr-description.tmpl
stack_bot/: __init__.py  alerts.py  config.py  conflict_comments.py  idempotency.py  main.py  notifications.py  redis_client.py  stack_locks.py  startup.py  workspace_mgr.py
stack_bot/handlers/: land.py
stack_bot/webhooks/: ado.py  models.py
stack_cli/: __init__.py  main.py  output.py
stack_cli/commands/: create.py
stack_core/: backup.py  drift.py  exceptions.py  git_ops.py  manifest.py  pr_templates.py  verify.py
stack_core/ado/: client.py  pr.py  urls.py
stack_core/operations/: __init__.py  create.py  land.py
stack_core/share/: pr_leaf.md  pr_root.md  pr_root_landed.md
tests/: conftest.py
tests/bats/: abort.bats  backup.bats  fixtures.bash  land.bats  manifest_basic.bats  push.bats  status.bats  sync.bats  test_helper.bash  update_additive.bats  update_conflict.bats  update_squash.bats  verify.bats
tests/bats/mocks/: az  pycharm
tests/integration/: test_bot_landing_flow.py  test_create_workflow.py  test_state_store.py
tests/unit/: test_ado_client.py  test_ado_parser.py  test_ado_pr_extensions.py  test_backup.py  test_drift.py  test_git_ops_clone.py  test_pr_templates.py  test_skill_sentinel.py  test_topology.py  test_verify.py
tests/unit/bot/: test_alerts.py  test_config.py  test_handler_land.py  test_idempotency.py  test_stack_locks.py  test_startup.py  test_webhook_handler.py  test_workspace_mgr.py
tests/unit/operations/: test_create.py  test_land.py  test_status.py
