[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pystack"
version = "0.1.0"
description = "Python core library for the stacked-diff workflow tooling"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Carroll Vance", email = "cvance@medicalmetrics.com" }]
dependencies = [
    "pydantic>=2.7",
    "redis>=5.0",
    "typer>=0.12",
    "omegaconf>=2.3",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.scripts]
stack = "stack_cli.main:app"
stackbot = "stack_bot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["stack_core", "stack_cli", "stack_bot"]

[tool.hatch.build.targets.wheel.force-include]
"stack_core/share" = "stack_core/share"

[tool.hatch.build.targets.sdist]
include = ["stack_core", "stack_cli", "stack_bot", "tests", "pyproject.toml", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require an external service (Redis, git-branchless)",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["stack_core", "stack_cli", "stack_bot"]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"stack_cli/**" = ["B008"]   # typer pattern: Option(...) as default value
"stack_bot/**" = ["B008"]   # fastapi pattern: Depends(...) as default value
